--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,8 @@
     border-radius: 8px;
     padding: 20px 25px;
     border: none;
+    font-size: 1.25rem;
+    cursor: pointer ;
 
 }
 
@@ -91,4 +93,33 @@ nav a{
 
 .banner-img{
     margin-top: 30px;
+}
+.banner-img img{
+    width: 100%;
+}
+
+
+/* Responsive for small device */
+
+@media screen and (max-width:576px) {
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+        gap: 10px;
+    }
+    
+}
+
+/* Responsive for medium device */
+
+@media screen and (min-width:576px) and (max-width:960px) {
+    header{
+        padding: 50px;
+    }
+    nav{
+        flex-direction: column;
+        gap: 10px;
+    }
 }
