--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,12 @@
     font-weight: 400;
 }
 
+.features-common-title{
+    color: #131313;
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+
 
 
 
@@ -107,6 +113,8 @@ main{
     margin: 70px auto;
 }
 
+/* Quick list section */
+
 .team-container{
     display: flex;
     align-items: center;
@@ -141,6 +149,46 @@ main{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1.5rem;
+}
+
+/* Features section */
+
+.features-container{
+    margin-top: 110px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.features-text{
+    max-width: 586px;
+}
+
+.features-title{
+    margin-bottom: 24px;
+}
+
+.features-description{
+    margin-bottom: 30px;
+}
+
+.features-box{
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+    padding: 30px 40px 30px 30px;
+    margin-bottom: 20px;
+}
+
+.features-experience img{
+    max-width: 708px;
+}
+
+.experience-container{
+    background-color: orange;
+    display: inline-block;
 }
 
 
