--- a/styles/style.css
+++ b/styles/style.css
@@ -97,6 +97,10 @@ nav a{
     margin-bottom: 30px;
 }
 
+.banner-description{
+    margin-bottom: 50px;
+}
+
 
 
 .banner-img{
@@ -270,6 +274,27 @@ main{
     align-items: center;
 }
 
+/* Footer section  */
+
+footer{
+    max-width: 1440px;
+    margin:  0 auto;
+
+}
+
+.footer{
+    border-radius: 8px;
+    background-color: #FFF4E7;
+    padding: 40px;
+    margin-bottom: 200px;
+}
+
+.footer-text{
+    color: #424242;
+    font-size: 1.25rem;
+    font-weight: 400;
+    text-align: center;
+}
 
 
 /* Responsive for small device */
